Modernize codebase: Clean up ServerMain and AssetDataIndex deprecations